--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="game-board">
 
         <img src="./Imagens/clouds.png" class="clouds">
-        <img src="/Imagens/pipe.png" class="pipe">
-        <img src="/Imagens/mario.gif" class="mario">
+        <img src="./Imagens/pipe.png" class="pipe">
+        <img src="./Imagens/mario.gif" class="mario">
 
     </div>
 
